[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradehelm"
version = "0.1.0"
description = "TradeHelm local-first intraday trading simulator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "streamlit>=1.40",
  "sqlalchemy>=2.0",
  "pydantic>=2.9",
  "pandas>=2.2",
  "requests>=2.32",
]


[project.scripts]
tradehelm-dev = "tradehelm.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.27"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
